Adjust square to avoid overflow

--- a/src/styles/components/pricing.scss
+++ b/src/styles/components/pricing.scss
@@ -125,10 +125,10 @@
     }
 
     .blue-square {
-      width: 15rem;
+      width: 5rem;
       height: 5rem;
       top: -1.5rem;
-      right: -3rem;
+      right: 0;
     }
 
     .package {
